[package]
name = "laz-rs-c"
version = "0.1.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
laz = { version = "^0.7.0" }
libc = "^0.2.86"


[features]
parallel =  ["laz/parallel"]

[profile.dev]
panic = "abort"